--- a/KinectIRTracker/.classpath
+++ b/KinectIRTracker/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/OSGi%Minimum-1.2"/>
-	<classpathentry kind="lib" path="/home/mike/Dev/Git/libfreenect/wrappers/java/target/freenect-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/freenect-1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
